# HealthReporting

./: .claudeignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOGFOOD.md  LICENSE  Notebook for Daily meal.ipynb  Notebook til test.ipynb  README.md  STATUS.md  TODO.md  architecture.md  claude_code_productivity.json  claude_code_productivity.md  conftest.py  coverage.json  paths.md  pyproject.toml  requirements.txt  run_chat.sh  silver_DailyMeal.sql  update_productivity.py  verify.sh
.claude/: settings.json
.claude/agents/: build-validator.md  code-reviewer.md  (+10 more)
.github/: dependabot.yml
.tasks/: TASK-004.yaml  TASK-005.yaml  TASK-006.yaml  TASK-007.yaml  TASK-008.yaml  TASK-009.yaml
Databricks DWH/: create_catalog__health_dw.sql  create_schemas__health_dw.sql
archive/: README.md
backlog/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml
docs/: AI_GOVERNANCE.md  CHANGELOG.md  CONTEXT.md  COST_LOG.md  PROJECT_PLAN.md  SETUP_DATABRICKS_MCP.md  SPRINT_LOG.md  architecture.md  c4-architecture.md  c4-level1-context.drawio  c4-level2-containers.drawio  c4-level3-components.drawio  data-source-overview.drawio  data_lineage.md  databricks_framework.md  learnings.md  metric_dictionary.md  paths.md  runbook.md
health_unified_platform/: __init__.py  databricks.yml  setup_audit_schema.py
scripts/: ai_pr_review.py  convert_lifesum_csv.sh  convert_oura_csv.sh  convert_withings_csv.sh  create_gold_views.py  daily_sync.sh  governance_check.py  run_quality_checks.py  security-hardening.sh  validate_naming.py
tests/: conftest.py  test_agent_schema.py  test_anomaly_detection_b3_d4.py  test_api.py  test_base_connector.py  test_baseline_computer.py  test_bronze_validation.py  test_chat_engine_b1.py  test_chat_evidence.py  test_correlation_engine.py  test_daily_stoic_connector.py  test_daily_sync.py  test_data_lake_integration.py  test_data_layer_a8_a9.py  test_data_quality_checker.py  test_databricks_sync.py  test_db22_db23_fixes.py  test_desktop_api.py  test_desktop_api_reports.py  test_desktop_chat_cli.py  test_desktop_reports.py  test_embedding_engine.py  test_evidence_store.py  test_export_fhir.py  test_export_pdf.py  test_food_context.py  test_genetics_ingestion.py  test_gold_local_views.py  test_hae_ingest.py  test_intelligence_b4_c2.py  test_keychain_util.py  test_lab_pdf_parser.py  test_launchd_env.py  test_lifesum_api_download.py  test_lifesum_pipeline.py  test_mcp_integration.py  test_mcp_server_errors.py  test_mcp_smoke.py  test_mcp_tool_integration.py  test_mcp_tools.py  (+31 more)
(+685 files in other folders)
