[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-platform"
version = "0.1.0"
description = "Personal health data platform with AI-native architecture"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["health_unified_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["health_unified_platform"]
markers = [
    "integration: tests that require live database or external services",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length enforced by ruff format

[tool.ruff.lint.per-file-ignores]
# Databricks notebooks use runtime globals (spark, dbutils, display, AuditLogger)
"**/databricks/**" = ["F821", "E402"]
