[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-platform"
version = "0.1.0"
description = "Personal health data platform with AI-native architecture"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pdfplumber>=0.9.0",
    "pyarrow>=12.0.0",
    "beautifulsoup4>=4.12.0",
    "eval-type-backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "httpx>=0.24.0",
    "eval-type-backport>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["health_unified_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["health_unified_platform"]
markers = [
    "integration: tests that require live database or external services",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["health_platform"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/databricks/*",
    "*/archive/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length enforced by ruff format

[tool.ruff.lint.per-file-ignores]
# Databricks notebooks use runtime globals (spark, dbutils, display, AuditLogger)
"**/databricks/**" = ["F821", "E402"]
